--- a/Data_Lake_with_Apache_SPARK/dl.cfg
+++ b/Data_Lake_with_Apache_SPARK/dl.cfg
@@ -1,13 +1,13 @@
 [AWS]
-AWS_ACCESS_KEY_ID =AKIATYHEYKHG7PGYDJPB
-AWS_SECRET_ACCESS_KEY =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
+AWS_ACCESS_KEY_ID =AKIATYHEYK..............(No quote)
+AWS_SECRET_ACCESS_KEY =UjHC7YRteFAtUTW4ysSys9u3k1gRV..........(Not quote)
 
 # not used
-#[S3]
-#input_data = S3_Data_Bucket
-#output_data = Destination_S3_Bucket
+# [S3]
+# input_data = S3_Data_Bucket
+# output_data = Destination_S3_Bucket
 
 # my bucket address
-#Destination_S3_Bucket =https://s3.console.aws.amazon.com/s3/buckets/sparkifybucket?region=us-west-2&tab=objects
+# Destination_S3_Bucket =https://s3.console.aws.amazon.com/s3/buckets/sparkifybucket?region=us-west-2&tab=objects
 
 
