--- a/Data_Lake_with_Apache_SPARK/dl.cfg
+++ b/Data_Lake_with_Apache_SPARK/dl.cfg
@@ -1,6 +1,6 @@
 [AWS]
 AWS_ACCESS_KEY_ID =AKIATYHEYK..............(No quote)
-AWS_SECRET_ACCESS_KEY =UjHC7YRteFAtUTW4ysSys9u3k1gRV..........(Not quote)
+AWS_SECRET_ACCESS_KEY =UjHC7YRteFAtUTW4ysSys9u3k1gRV..........(No quote)
 
 # not used
 # [S3]
